b=572018; DOMElementToImageSurface: fix memleak and work in one pass; r=vladimir